manifests/directus/directus-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: directus
  labels:
    app: directus
spec:
  serviceName: directus
  replicas: 1
  selector:
    matchLabels:
      app: directus
  template:
    metadata:
      labels:
        app: directus
    spec:
      containers:
      - name: directus
        image: directus/directus:latest
        ports:
        - containerPort: 8055
          name: http
        volumeMounts:
        - name: storage
          mountPath: /storage
        - name: extensions
          mountPath: /extensions

  volumeClaimTemplates:
  - metadata:
      name: extensions
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "openebs-hostpath"
      resources:
        requests:
          storage: 10Gi
  - metadata:
      name: storage
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "openebs-hostpath"
      resources:
        requests:
          storage: 10Gi
