manifests/directus/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: directus
  labels:
    app: directus
spec:
  ports:
  - port: 8055
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: directus
  type: ClusterIP
